[project]
name = "counternodes"
description = "Modified some functions to enhance the security of the node."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/GHOSTLXH/ComfyUI-Counternodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ghostlxh"
DisplayName = "ComfyUI-Counternodes"
Icon = ""
