[project]
name = "counternodes"
description = "The node mapping file has been readjusted to achieve a download and use functionality, thereby reducing the number of operational steps."
version = "1.1.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/GHOSTLXH/ComfyUI-Counternodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ghostlxh"
DisplayName = "ComfyUI-Counternodes"
Icon = ""
